# stochastyczneWPrzyrodniczych

./: README.md  main.py  moran_model.py  opis.md  przenikanie.ipynb  pyproject.toml  reakcje.ipynb  spacer-losowy.py
